update git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,9 @@ typings/
 
 # next.js build output
 .next
+
+.idea/inspectionProfiles/profiles_settings.xml
+
+.idea/inspectionProfiles/Project_Default.xml
+
+.idea/
